--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,8 +55,11 @@ form{
 .flex{
     display:flex;
 }
-.item-flex{
-    flex:1
+.flex > .item-grow{
+    flex:1 1 100%;
+}
+.item-shrink{
+    flex:0 1 0%;
 }
 
 .smaller .margin, .smaller button{
